# vipsgo

./: .gitignore  LICENSE  Makefile  README.md  go.mod
c/: CMakeLists.txt
c/include/: vips_wrapper.h
c/test/: test_wrapper.cpp
examples/: go.mod  main.go
vips/: vips.go
vips/c/: test_wrapper
vips/c/src/: vips_wrapper.cpp
